--- a/src/app/new-order/new-order.component.html
+++ b/src/app/new-order/new-order.component.html
@@ -1,4 +1,4 @@
-<h1>New Order</h1>
+<h1>{{viewClass}}</h1>
 
 <form [formGroup]="myForm" (ngSubmit)="submitHandler()" class="form-flex">
     <div class="row">
