--- a/src/app/new-order/new-order.component.html
+++ b/src/app/new-order/new-order.component.html
@@ -61,7 +61,7 @@
     <div class="row">
         <div class="col">
             <button mat-button class="btn btn-primary" color="primary" type="submit" [disabled]="myForm.invalid">Save Order</button>
-            <button *ngIf="edit" mat-button class="btn btn-danger ml-1" (click)="delete()">Delete</button>
+            <button *ngIf="edit" mat-button type="button" class="btn btn-danger ml-1" (click)="delete()">Delete</button>
         </div>
         <div class="col-sm ">
             <div class="total_price ">
