--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -64,7 +64,7 @@
                         <tr mat-row *matRowDef="let row; columns: displayedAllOrderColumns;"></tr>
                     </table>
                 </mat-tab>
-                <mat-tab label="Orders">
+                <mat-tab label="Orders for Date">
                     <table mat-table [dataSource]="orders" matSort class="mat-elevation-z8 mt-3 table-max">
                         <ng-container matColumnDef="orderNumber">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> Order No. </th>
@@ -106,6 +106,7 @@
                     </table>
                 </mat-tab>
                 <mat-tab label="Production Quantities">
+
                     <table id="orderAmountTable" mat-table [dataSource]="orderItemCounts" matSort class="mat-elevation-z8 mt-3 table-max">
 
                         <!-- Item name -->
@@ -115,7 +116,7 @@
                         </ng-container>
 
                         <!-- Count -->
-                        <ng-container matColumnDef="count">
+                        <ng-container matColumnDef="amount">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> Count </th>
                             <td mat-cell *matCellDef="let item"> {{item.amount}} </td>
                         </ng-container>
