--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
 
 
             <mat-form-field class="ml-2">
-                <input matInput autocomplete="off" placeholder="Filter items" (keyup)="applyFilter($event.target.value)">
+                <input matInput autocomplete="off" placeholder="Filter items" (keyup)="updateSearch($event.target.value)">
             </mat-form-field>
 
             <mat-form-field class="ml-2 mr-2" [class.hidden-item]="activeTab == 'All Orders'">
@@ -61,7 +61,7 @@
                     </table>
                 </mat-tab>
                 <mat-tab label="Orders for Date">
-                    <table mat-table [dataSource]="orders" matSort class="mat-elevation-z8 mt-3 table-max">
+                    <table mat-table [dataSource]="ordersByDate" matSort class="mat-elevation-z8 mt-3 table-max">
                         <ng-container matColumnDef="first_name">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> First Name </th>
                             <td mat-cell *matCellDef="let item"> {{item.first_name}} </td>
