--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -111,11 +111,21 @@
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
                             <td mat-cell *matCellDef="let item"> {{item.name}} </td>
                         </ng-container>
+                        <ng-container matColumnDef="type">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> type </th>
+                            <td mat-cell *matCellDef="let item"> {{item.type}} </td>
+                        </ng-container>
 
                         <!-- Count -->
                         <ng-container matColumnDef="amount">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> Count </th>
                             <td mat-cell *matCellDef="let item"> {{item.amount}} </td>
+                        </ng-container>
+
+                        <!-- Count -->
+                        <ng-container matColumnDef="sliced_amount">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> tranché </th>
+                            <td mat-cell *matCellDef="let item"> {{item.sliced_amount > 0 ? item.sliced_amount : ""}} </td>
                         </ng-container>
 
 
